welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run(){
         def FaireV() {
         	gauche();avance();avance();BaisseBrosse;droite;LeveBrosse;droite();avance();BaisseBrosse
         }
}
